# spacetrader

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs
data/: solar-en.toml
misc/: header.txt
mspacetrader/: __main__.py  data.py
src/: args.rs  data.rs  dynamic_enum.rs  game.rs  info.rs  macros.rs  main.rs  types.rs
src/data/: file.rs  mod.rs  object.rs
